# synthclaw

./: .gitignore  Cargo.toml  README.md  SKILL.md
examples/configs/: augment_sentiment.yaml  generate_qa.yaml  generate_reviews.yaml  generate_with_upload.yaml  test_small.yaml  test_validation.yaml
src/: error.rs  lib.rs  main.rs
src/checkpoint/: mod.rs
src/cli/: datasets.rs  estimate.rs  generate.rs  mod.rs  resume.rs
src/config/: schema.rs
src/datasets/: hf.rs  local.rs  mod.rs
src/generation/: engine.rs  mod.rs  prompt.rs
src/hub/: mod.rs
src/output/: mod.rs
src/providers/: anthropic.rs  mod.rs  openai.rs
src/validation/: dedup.rs  mod.rs  validators.rs
